--- a/frontend/allpack/iriza/iriza.html
+++ b/frontend/allpack/iriza/iriza.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/frontend/css/footer.css">
     <link rel="stylesheet" href="/frontend/css/navbar.css">
+    <link rel="stylesheet" href="/frontend/allpack/css/decor.css">
     <style>
         /* Card Styles */
         .card {
@@ -75,7 +76,18 @@
             </div>
         </div>
     </nav>
-
+    <section class="hero-section">
+        <!-- Video Background -->
+        <video autoplay muted loop>
+            <source src="/frontend/allpack/iriza/irizadata/v1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <!-- Hero Content -->
+        <div class="text-center">
+            <h2>Impeccable Service for Your Perfect Day</h2>
+            <p class="lead">Our dedicated servers ensure every detail is flawlessly executed, so you can focus on celebrating your love.</p>
+        </div>
+    </section>
     <!-- Card Section -->
     <div class="container my-5">
         <h2 class="text-center mb-5">Event Services in Action</h2>
