--- a/test2.html
+++ b/test2.html
@@ -1,177 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Decor Inspiration</title>
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Swiper.js CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <!-- Custom CSS -->
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-        }
-
-        .swiper {
-            width: 100%;
-            height: 100%;
-        }
-
-        .swiper-slide {
-            text-align: center;
-            background: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .swiper-slide:hover {
-            transform: scale(1.05);
-        }
-
-        .swiper-slide img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            cursor: pointer;
-        }
-
-        .card-body {
-            padding: 15px;
-        }
-
-        .card-title {
-            font-size: 1.2rem;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .card-text {
-            font-size: 0.9rem;
-            color: #666;
-        }
-
-        .modal-content {
-            background-color: #fff;
-            border-radius: 10px;
-        }
-
-        .modal-body img {
-            width: 100%;
-            border-radius: 10px;
-        }
-    </style>
-</head>
-
-<body>
-    <!-- Slider Section -->
-    <div class="container my-5">
-        <h1 class="text-center mb-4">Wedding Decor Inspiration</h1>
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <!-- Slide 1 -->
-                <div class="swiper-slide">
-                    <div class="card">
-                        <a href="/frontend/allpack/decor/decor1.jpg">
-                            <img src="/frontend/allpack/decor/decor1.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                        </a>
-                        <div class="card-body">
-                            <h5 class="card-title">Elegant Floral Arrangements</h5>
-                            <p class="card-text">Beautiful floral designs for your special day.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide 2 -->
-                <div class="swiper-slide">
-                    <div class="card">
-                        <a href="/frontend/allpack/decor/decor2.jpg">
-                            <img src="/frontend/allpack/decor/decor2.jpg" alt="Wedding Decor 2" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                        </a>
-                        <div class="card-body">
-                            <h5 class="card-title">Romantic Candlelight Setup</h5>
-                            <p class="card-text">Create a romantic ambiance with candles.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide 3 -->
-                <div class="swiper-slide">
-                    <div class="card">
-                        <a href="/frontend/allpack/decor/decor3.jpg">
-                            <img src="/frontend/allpack/decor/decor3.jpg" alt="Wedding Decor 3" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                        </a>
-                        <div class="card-body">
-                            <h5 class="card-title">Luxurious Table Settings</h5>
-                            <p class="card-text">Exquisite table setups for a grand celebration.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Swiper Pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Swiper Navigation -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-        </div>
+<section class="hero-section">
+    <!-- Video Background -->
+    <video autoplay muted loop>
+        <source src="/frontend/allpack/iriza/irizadata/v1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <!-- Hero Content -->
+    <div class="text-center">
+        <h2>Elevate Your Wedding Experience with Impeccable Service and Stunning Decor</h2>
+        <p class="lead">From breathtaking themes to seamless service, let us make your special day unforgettable.</p>
     </div>
-
-    <!-- Modal for Enlarged Image -->
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="imageModalLabel">Enlarged Image</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body text-center">
-                    <img id="enlargedImg" src="" class="img-fluid" alt="Enlarged Image">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Swiper.js JS -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <!-- Bootstrap 5 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
-    <script>
-        // Initialize Swiper with Autoplay
-        var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 1,
-            spaceBetween: 20,
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-            },
-            navigation: {
-                nextEl: ".swiper-button-next",
-                prevEl: ".swiper-button-prev",
-            },
-            autoplay: {
-                delay: 3000, 
-                disableOnInteraction: false, 
-            },
-            breakpoints: {
-                640: {
-                    slidesPerView: 2,
-                },
-                1024: {
-                    slidesPerView: 3,
-                },
-            },
-        });
-
-        // Function to enlarge image
-        function enlargeImage(img) {
-            var enlargedImg = document.getElementById("enlargedImg");
-            enlargedImg.src = img.src; 
-        }
-    </script>
-</body>
-
-</html>
+</section>
