--- a/frontend/allpack/iriza/iriza.html
+++ b/frontend/allpack/iriza/iriza.html
@@ -10,6 +10,77 @@
     <link rel="stylesheet" href="/frontend/css/navbar.css">
     <link rel="stylesheet" href="/frontend/allpack/css/decor.css">
     <style>
+        /* Hero Section Styling */
+        .hero-section {
+            position: relative;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+            overflow: hidden;
+        }
+
+        .hero-section video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
+
+        .hero-section h2 {
+            font-size: 3.5rem;
+            font-weight: bold;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+        }
+
+        .hero-section .lead {
+            font-size: 1.5rem;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+        }
+
+        .hero-section .btn {
+            font-size: 1.2rem;
+            padding: 10px 30px;
+            border-radius: 25px;
+            margin-top: 20px;
+        }
+
+        /* Call-to-Action Section */
+        .cta-section {
+            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            padding: 80px 0;
+            color: white;
+            text-align: center;
+        }
+
+        .cta-section h2 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        .cta-section p {
+            font-size: 1.2rem;
+            margin-bottom: 30px;
+        }
+
+        .cta-section .btn {
+            font-size: 1.2rem;
+            padding: 10px 30px;
+            border-radius: 25px;
+            background-color: #007bff;
+            border: none;
+        }
+
+        .cta-section .btn:hover {
+            background-color: #0056b3;
+        }
+
         /* Card Styles */
         .card {
             border: none;
@@ -53,6 +124,35 @@
             max-width: 100%;
             height: auto;
         }
+
+        /* Servers Section Styling */
+        .servers-section .card {
+            border: none;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .servers-section .card:hover {
+            transform: scale(1.05);
+        }
+
+        .servers-section .card-img-top {
+            height: 250px;
+            object-fit: cover;
+        }
+
+        .servers-section .btn-primary {
+            background-color: #007bff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 25px;
+        }
+
+        .servers-section .btn-primary:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -76,6 +176,8 @@
             </div>
         </div>
     </nav>
+
+    <!-- Hero Section -->
     <section class="hero-section">
         <!-- Video Background -->
         <video autoplay muted loop>
@@ -86,8 +188,19 @@
         <div class="text-center">
             <h2>Impeccable Service for Your Perfect Day</h2>
             <p class="lead">Our dedicated servers ensure every detail is flawlessly executed, so you can focus on celebrating your love.</p>
+            <a href="#" class="btn btn-primary btn-lg">Book Your Event Now</a>
         </div>
     </section>
+
+    <!-- Call-to-Action Section -->
+    <section class="cta-section">
+        <div class="container">
+            <h2>Ready to Create Unforgettable Memories?</h2>
+            <p>Let us handle the details while you enjoy your special day. Contact us today to start planning your dream event!</p>
+            <a href="#" class="btn btn-primary btn-lg">Get Started</a>
+        </div>
+    </section>
+
     <!-- Card Section -->
     <div class="container my-5">
         <h2 class="text-center mb-5">Event Services in Action</h2>
@@ -229,46 +342,36 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4 footer-animated">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>About Us</h5>
-                    <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled footer-content">
-                        <li><a href="home.htm" class="text-light">Home</a></li>
-                        <li><a href="#" class="text-light">About</a></li>
-                        <li><a href="#" class="text-light">Services</a></li>
-                        <li><a href="index.html" class="text-light">Packages</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5>Connect With Us</h5>
-                    <ul class="list-unstyled footer-content">
-                        <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-                        <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
-                        <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
-                        <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                    </ul>
-                </div>
+   <!-- Footer -->
+   <footer class="bg-dark text-light py-4 footer-animated">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h5>About Us</h5>
+                <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
             </div>
-            <div class="text-center mt-4">
-                <p class="footer-content">&copy; 2025 Event Planner. All Rights Reserved.</p>
+            <div class="col-md-4">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled footer-content">
+                    <li><a href="home.htm" class="text-light">Home</a></li>
+                    <li><a href="#" class="text-light">About</a></li>
+                    <li><a href="#" class="text-light">Services</a></li>
+                    <li><a href="index.html" class="text-light">Packages</a></li>
+                    <li><a href="#" class="text-light">Contact</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h5>Connect With Us</h5>
+                <ul class="list-unstyled footer-content">
+                    <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                    <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
+                    <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
+                    <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                </ul>
             </div>
         </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        function openModal(imageSrc) {
-            document.getElementById('modalImage').src = imageSrc;
-        }
-    </script>
-</body>
-</html>
+        <div class="text-center mt-4">
+            <p class="footer-content">&copy; 2025 Event Planner. All Rights Reserved.</p>
+        </div>
+    </div>
+</footer>
