--- a/frontend/allpack/indinzi/troup/indinzi.html
+++ b/frontend/allpack/indinzi/troup/indinzi.html
@@ -81,29 +81,29 @@
             <div class="carousel-item active">
                 <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(1) (copy).jpg" class="img" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First Slide Label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>Body as a Storyteller </h5>
+                    <p>Showcases how the human body becomes the medium of storytelling, conveying complex cultural narratives through dance.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(3).jpg" class="img" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second Slide Label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5>Dances of Resilience </h5>
+                    <p>Focuses on how traditional dance represents resilience, depicting the strength and perseverance of communities throughout history</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/frontend/allpack/indinzi/assetindinzi/pic9.jpg" class="img" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third Slide Label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>Closing Dance</h5>
+                    <p>n some cultures, the wedding celebration ends with a traditional dance to mark the completion of the ceremony, bringing closure and joy to the event.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/frontend/allpack/indinzi/assetindinzi/pic6.jpg" class="img" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third Slide Label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5> Living Traditions </h5>
+                    <p>Captures how traditional dance continues to evolve while staying true to its cultural roots, making it a living tradition.</p>
                 </div>
             </div>
         </div>
@@ -133,8 +133,8 @@
         <div class="card">
           <img src="/frontend/allpack/indinzi/assetindinzi/pic18.jpg" class="card-img-top" alt="Wedding Planner">
           <div class="card-body">
-            <h5 class="card-title">Wedding Planner</h5>
-            <p class="card-text">Our expert wedding planners will guide you every step of the way, ensuring your wedding is organized and stress-free.</p>
+            <h5 class="card-title">Traditional Dance Performance</h5>
+            <p class="card-text">Highlights the elegance and cultural richness of traditional dance.</p>
           </div>
         </div>
       </div>
@@ -144,8 +144,8 @@
         <div class="card">
           <img src="/frontend/allpack/indinzi/assetindinzi/pic1.jpg" class="card-img-top" alt="Venue Manager">
           <div class="card-body">
-            <h5 class="card-title">Venue Manager</h5>
-            <p class="card-text">The Venue Manager oversees the logistics and setup of the venue, ensuring everything runs smoothly on your big day.</p>
+            <h5 class="card-title">Cultural Dance Display </h5>
+            <p class="card-text">Describes how every dance movement is a part of the cultural storytelling tradition.</p>
           </div>
         </div>
       </div>
@@ -155,8 +155,8 @@
         <div class="card">
           <img src="/frontend/allpack/indinzi/assetindinzi/noella.jpg" class="card-img-top" alt="Event Coordinator">
           <div class="card-body">
-            <h5 class="card-title">Event Coordinator</h5>
-            <p class="card-text">Our Event Coordinators are responsible for ensuring the event unfolds as planned, managing the schedule and all moving parts.</p>
+            <h5 class="card-title">Grace in Tradition</h5>
+            <p class="card-text">Focuses on the balance of grace and power in traditional dance.</p>
           </div>
         </div>
       </div>
@@ -166,8 +166,9 @@
         <div class="card">
           <img src="/frontend/allpack/indinzi/assetindinzi/patty.jpg" class="card-img-top" alt="Decor Specialist">
           <div class="card-body">
-            <h5 class="card-title">Decor Specialist</h5>
-            <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+            <h5 class="card-title">Ritual Dance Movements</h5>
+            <p class="card-text"> Talks about the deeper spiritual significance of ritualistic dances.</p>
+           
           </div>
         </div>
       </div>
@@ -177,8 +178,8 @@
         <div class="card">
           <img src="/frontend/allpack/indinzi/assetindinzi/best.jpg" class="card-img-top" alt="Catering Manager">
           <div class="card-body">
-            <h5 class="card-title">Catering Manager</h5>
-            <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+            <h5 class="card-title">Celebration Through Dance </h5>
+            <p class="card-text">Emphasizes the celebratory aspect of dance as a communal expression.</p>
           </div>
         </div>
       </div>
@@ -188,8 +189,8 @@
         <div class="card">
           <img src="/frontend/allpack/indinzi/assetindinzi/pic.jpg" class="card-img-top" alt="Photographer/Videographer">
           <div class="card-body">
-            <h5 class="card-title">Photographer & Videographer</h5>
-            <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+            <h5 class="card-title">Dance of the Ancestors</h5>
+            <p class="card-text"> Describes how traditional dance connects us to our ancestors' wisdom.</p>
           </div>
         </div>
       </div>
@@ -199,8 +200,8 @@
         <div class="card">
           <img src="/frontend/allpack/indinzi/assetindinzi/pic15.jpg" class="card-img-top" alt="Decor Specialist">
           <div class="card-body">
-            <h5 class="card-title">Decor Specialist</h5>
-            <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+            <h5 class="card-title">Ceremonial Dance Expressions</h5>
+            <p class="card-text">Highlights the profound meaning of gestures in ceremonial dances.</p>
           </div>
         </div>
       </div>
@@ -210,8 +211,8 @@
         <div class="card">
           <img src="/frontend/allpack/indinzi/assetindinzi/pic13.jpg" class="card-img-top" alt="Catering Manager">
           <div class="card-body">
-            <h5 class="card-title">Catering Manager</h5>
-            <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+            <h5 class="card-title">Rhythms of Tradition </h5>
+            <p class="card-text">Captures the essence of cultural rhythm and the heartbeat of the</p>
           </div>
         </div>
       </div>
@@ -221,8 +222,8 @@
         <div class="card">
           <img src="/frontend/allpack/indinzi/assetindinzi/pic16.jpg" class="card-img-top" alt="Photographer/Videographer">
           <div class="card-body">
-            <h5 class="card-title">Photographer & Videographer</h5>
-            <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+            <h5 class="card-title">Dance as Storytelling </h5>
+            <p class="card-text">Describes traditional dance as a medium to tell stories and myths.</p>
           </div>
         </div>
       </div>
@@ -234,8 +235,8 @@
     <div class="card">
       <img src="/frontend/allpack/indinzi/assetindinzi/eunice.jpg" class="card-img-top" alt="Decor Specialist">
       <div class="card-body">
-        <h5 class="card-title">Decor Specialist</h5>
-        <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+        <h5 class="card-title">Dance of Unity</h5>
+        <p class="card-text">ocuses on dance as a unifying force within a community or culture.</p>
       </div>
     </div>
   </div>
@@ -245,8 +246,8 @@
     <div class="card">
       <img src="/frontend/allpack/indinzi/assetindinzi/oben2.jpg" class="card-img-top" alt="Catering Manager">
       <div class="card-body">
-        <h5 class="card-title">Catering Manager</h5>
-        <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+        <h5 class="card-title">Expression Through Dance </h5>
+        <p class="card-text">Emphasizes how dance communicates emotion and cultural identity.</p>
       </div>
     </div>
   </div>
@@ -256,8 +257,8 @@
     <div class="card">
       <img src="/frontend/allpack/indinzi/assetindinzi/pic17.jpg" class="card-img-top" alt="Photographer/Videographer">
       <div class="card-body">
-        <h5 class="card-title">Photographer & Videographer</h5>
-        <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+        <h5 class="card-title">Elegance in Motion</h5>
+        <p class="card-text">Describes the graceful, flowing nature of traditional dance.</p>
       </div>
     </div>
   </div>
@@ -266,8 +267,8 @@
     <div class="card">
       <img src="/frontend/allpack/indinzi/assetindinzi/pic12.jpg" class="card-img-top" alt="Decor Specialist">
       <div class="card-body">
-        <h5 class="card-title">Decor Specialist</h5>
-        <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+        <h5 class="card-title">Where Dance Meets History</h5>
+        <p class="card-text">Experience the seamless blend of rhythm, costume, and dance that honors the past while inspiring the future</p>
       </div>
     </div>
   </div>
@@ -277,8 +278,8 @@
     <div class="card">
       <img src="/frontend/allpack/indinzi/assetindinzi/pic22.jpg" class="card-img-top" alt="Catering Manager">
       <div class="card-body">
-        <h5 class="card-title">Catering Manager</h5>
-        <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+        <h5 class="card-title">Movement as Expression</h5>
+        <p class="card-text">Every gesture reflects the deep emotions, values, and stories that define our heritage.</p>
       </div>
     </div>
   </div>
@@ -288,8 +289,8 @@
     <div class="card">
       <img src="/frontend/allpack/indinzi/assetindinzi/pic14.jpg" class="card-img-top" alt="Photographer/Videographer">
       <div class="card-body">
-        <h5 class="card-title">Photographer & Videographer</h5>
-        <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+        <h5 class="card-title">Stories in Motion </h5>
+        <p class="card-text">Talks about how traditional dances convey oral histories, legends, and stories that have been passed down over centuries.</p>
       </div>
     </div>
   </div>
@@ -298,8 +299,8 @@
     <div class="card">
       <img src="/frontend/allpack/indinzi/assetindinzi/last3.jpg" class="card-img-top" alt="Decor Specialist">
       <div class="card-body">
-        <h5 class="card-title">Decor Specialist</h5>
-        <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+        <h5 class="card-title">Sacred Movement</h5>
+        <p class="card-text">Describes the reverence in traditional dance, where every step is a sacred expression of culture, devotion, and spiritualit</p>
       </div>
     </div>
   </div>
@@ -309,8 +310,8 @@
     <div class="card">
       <img src="/frontend/allpack/indinzi/assetindinzi/abakobwa.jpg" class="card-img-top" alt="Catering Manager">
       <div class="card-body">
-        <h5 class="card-title">Catering Manager</h5>
-        <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+        <h5 class="card-title">Preserving Cultural Identity </h5>
+        <p class="card-text">Focuses on how traditional dance helps preserve and reinforce cultural identity in an ever-changing world.</p>
       </div>
     </div>
   </div>
@@ -320,8 +321,8 @@
     <div class="card">
       <img src="/frontend/allpack/indinzi/assetindinzi/last2.jpg" class="card-img-top" alt="Photographer/Videographer">
       <div class="card-body">
-        <h5 class="card-title">Photographer</h5>
-        <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+        <h5 class="card-title">Vibrance in Every Step</h5>
+        <p class="card-text">Highlights how every traditional dance is a dynamic display of life, energy, and cultural expression through movement.</p>
       </div>
     </div>
   </div>
