--- a/frontend/home_packages/about.html
+++ b/frontend/home_packages/about.html
@@ -179,56 +179,40 @@
 </section>
 
 
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4">
-        <div class="container-sm">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>About Us</h5>
-                    <p>We are a dedicated team of event planners, committed to creating unforgettable experiences.
-                        From weddings to corporate events, we handle every detail with care and expertise.</p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="home.htm" class="text-light">Home</a></li>
-                        <li><a href="#" class="text-light">About</a></li>
-                        <li><a href="#" class="text-light">Services</a></li>
-                        <li><a href="index.html" class="text-light">Packages</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5>Contact Us</h5>
-                    <p>Email: info@eventplanner.com</p>
-                    <p>Phone: +250785300707</p>
-                    <p>Address: 123 Event St, City, Country</p>
-                </div>
+    
+   <!-- Footer -->
+   <footer class="bg-dark text-light py-4 footer-animated">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h5>About Us</h5>
+                <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
             </div>
-            <div class="row">
-                <div class="col text-center mt-4">
-                    <ul class="list-inline">
-                        <li class="list-inline-item">
-                            <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i
-                                    class="fab fa-instagram"></i></a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="col-md-4">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled footer-content">
+                    <li><a href="home.htm" class="text-light">Home</a></li>
+                    <li><a href="#" class="text-light">About</a></li>
+                    <li><a href="#" class="text-light">Services</a></li>
+                    <li><a href="index.html" class="text-light">Packages</a></li>
+                    <li><a href="#" class="text-light">Contact</a></li>
+                </ul>
             </div>
-            <div class="row">
-                <div class="col text-center mt-3">
-                    <p>&copy; 2024 Event Planner. All rights reserved.</p>
-                </div>
+            <div class="col-md-4">
+                <h5>Connect With Us</h5>
+                <ul class="list-unstyled footer-content">
+                    <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                    <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
+                    <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
+                    <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                </ul>
             </div>
         </div>
-    </footer>
-
+        <div class="text-center mt-4">
+            <p class="footer-content">&copy; 2025 Event Planner. All Rights Reserved.</p>
+        </div>
+    </div>
+</footer>
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
